[ISSUE 10] Color contrast ratio follows WCAG

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: #ffffff;
 }
 
 .d-bloc .a-btn:hover,
@@ -150,7 +150,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
+    color: #00008b;
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -285,6 +285,10 @@ a:hover {
 
 #bloc-2-services p {
     font-size: 11px;
+}
+
+#bloc-3-what-i-do p{
+    font-size: 14px;
 }
 
 .navbar {
@@ -690,7 +694,7 @@ p {
     font-family: "Open Sans";
 }
 
-.cta-hero {
+#cta-hero {
     margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
@@ -784,13 +788,13 @@ h4 {
     color: #364577!important;
 }
 
-.btn-atomic-tangerine {
-    background: #F3976C;
+.btn-atomic-blue {
+    background: #364577;
     color: #FFFFFF!important;
 }
 
-.btn-atomic-tangerine:hover {
-    background: #c27956!important;
+.btn-atomic-blue:hover {
+    background: #425494!important;
     color: #FFFFFF!important;
 }
 
@@ -808,6 +812,14 @@ h4 {
 
 .ltc-atomic-tangerine:hover {
     color: #c27956!important;
+}
+
+.ltc-atomic-blue {
+    color: #0000ff!important;
+}
+
+.ltc-atomic-blue:hover {
+    color: #00008b!important;
 }
 
 .icon-dark-slate-blue {
@@ -835,6 +847,10 @@ h4 {
     height: 40px;
 }
 
+#bloc-1-hero h1{
+    color: white!important;
+}
+
 #bloc-1-hero img{
     height: 150px;
 }
@@ -847,6 +863,18 @@ h4 {
 #bloc-4-portfolio h2{
     font-size: 32px;
     font-weight: bolder;
+}
+
+#bloc-4-portfolio h3{
+    font-size: 16px;
+}
+
+#bloc-4-portfolio p{
+    font-size: 14px;
+}
+
+#bloc-6 p{
+    font-size: 14px;
 }
 
 #review p{
